# pomo

./: .clang-format  CMakeLists.txt  README.md  config.toml.example  pomo.desktop
src/: BlinkingLabel.hpp  Notification.hpp  Pomo.cpp  Pomo.hpp  main.cpp
